objects/FLODocs__Profile_PermissionSet_Relation__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Customization_Layout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customization Layout</description>
        <inlineHelpText>Customization Layout</inlineHelpText>
        <label>Customization Layout</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Profile / PermissionSet Relations</relationshipLabel>
        <relationshipName>Profile_PermissionSet_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customization_Record_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customization Record Type</description>
        <inlineHelpText>Customization Record Type</inlineHelpText>
        <label>Customization Record Type</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Profile / PermissionSet Relations (Customization Record Type)</relationshipLabel>
        <relationshipName>Profile_PermissionSet_Relations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Layout_Name__c</fullName>
        <formula>FLODocs__Customization_Layout__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Layout Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Parent_Object_Name__c</fullName>
        <formula>FLODocs__Parent_Object__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Object Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Parent_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customization Parent Object</description>
        <inlineHelpText>Customization Parent Object</inlineHelpText>
        <label>Customization Parent Object</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Profile / PermissionSet Relations (Customization Parent Object)</relationshipLabel>
        <relationshipName>Profile_PermissionSet_Relations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_PermissionSet_Name__c</fullName>
        <formula>FLODocs__Profile_PermissionSet__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile / PermissionSet Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Profile_PermissionSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Profile / PermissionSet</description>
        <inlineHelpText>Profile / PermissionSet</inlineHelpText>
        <label>Profile / PermissionSet</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Profile / PermissionSet Relations (Profile / PermissionSet)</relationshipLabel>
        <relationshipName>Profile_PermissionSet_Relations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Record_type_Name__c</fullName>
        <formula>FLODocs__Customization_Record_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record type Name</label>
        <type>Text</type>
    </fields>
    <label>Profile / PermissionSet Relation</label>
    <nameField>
        <label>Profile / PermissionSet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Profile / PermissionSet Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>